Implementing Learn landing page layout (#618)
* Implementing the layout for the Learn landing page.

Signed-off-by: Danilo Aimini <82231674+AMZN-daimini@users.noreply.github.com>

* Remove duplicated welcome guide section

Signed-off-by: Danilo Aimini <82231674+AMZN-daimini@users.noreply.github.com>

* Allow custom doc pages placement in layout without moving the pages to a different folder (as it was done originally)

Signed-off-by: Danilo Aimini <82231674+AMZN-daimini@users.noreply.github.com>

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -407,6 +407,26 @@ $width: '59vw';
 
 // Docs pages 
 
+  // Welcome page
+
+.doc_card
+  min-height: 18rem
+  color: $o3de-black
+  overflow: hidden
+
+  &:hover
+    color: $o3de-black
+
+  &.intro
+    min-height: 0
+
+  .card-title
+    margin-top: 0
+  
+.card-image
+  background-size: cover
+  background-position: 50% 50%
+
 // layouts/docs/single.html, layouts/docs/section.html 
 
 .docs-sidebar 
