First half of the download page
Signed-off-by: Danilo Aimini <82231674+AMZN-daimini@users.noreply.github.com>

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -79,6 +79,9 @@ $o3de-green: #58BD61
 
 // General 
 
+body
+  font-family: $font-family-headers
+
 .breadcrumb 
   li
     list-style: none
@@ -114,6 +117,31 @@ a
   &:hover, &:active 
     color: $o3de-mediumblue
     text-decoration: none
+
+.btn-xl-block
+  @include media-breakpoint-up(xl)
+    width: 100%
+    display: block
+
+.btn-lg-block
+  @include media-breakpoint-up(lg)
+    width: 100%
+    display: block
+
+.btn-md-block
+  @include media-breakpoint-up(md)
+    width: 100%
+    display: block
+
+.btn-sm-block
+  @include media-breakpoint-up(sm)
+    width: 100%
+    display: block
+
+.btn-xs-block
+  @include media-breakpoint-up(xs)
+    width: 100%
+    display: block
 
   // give code some base styling 
 pre
@@ -208,8 +236,11 @@ $width: '59vw';
 // layouts/partial/download/hero.html
 
 .download-hero 
-  background-image: url('/img/download/hero.jpg')
-  background-size: 50% auto
+  background-image: url('/img/download/hero-bg.png')
+  background-size: cover
+  background-position: 50% 50%
+  max-height: 20rem
+  
 
 .active-os-cta
   background-color: $o3de-blue
@@ -370,10 +401,6 @@ $width: '59vw';
   .social-name 
     font-size: 1rem
     vertical-align: text-top
-
-// partials/download/hero.html 
-
-
 
 // Docs pages 
 
