Some fixes for Lorem Ipsum
Signed-off-by: Doug Erickson <dougeric@amazon.com>

--- a/layouts/docs/docs_landing.html
+++ b/layouts/docs/docs_landing.html
@@ -46,9 +46,9 @@
   </div>
   <div class="row flex">
     <div class="col-12 docs-content">
-      <h1 class="title">Lorem Ipsum</h1>
+      <h1 class="title">Guides</h1>
       <div class="content">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore.
+       Jump into the following guides for O3DE based on your needs. 
       </div>
     </div>
   </div>
