--- a/layouts/partials/home/get-started.html
+++ b/layouts/partials/home/get-started.html
@@ -23,9 +23,9 @@
       <div class="col col-8">
         <h3>Coming Soon...</h3>
         <div class="getstarted-text-width">
-          We are currently working hard to give you a better experience and providing
+          We are currently working hard to give you a better experience and provide
           more tutorials. If you want to check in on the creation process, you are
-          welcome to take a peek on <a href="#" target="_blank">GitHub</a>.
+          welcome to take a peek on <a href="https://github.com/o3de/o3de.org/issues" target="_blank">GitHub</a>.
         </div>
       </div>
     </div>
