more lorem ipsum removal
Signed-off-by: Doug Erickson <dougeric@amazon.com>

--- a/layouts/partials/home/get-started.html
+++ b/layouts/partials/home/get-started.html
@@ -1,7 +1,7 @@
 <section class="container-fluid home-getstarted">
   <div class="d-flex flex-column">
     <h1>Get started with O3DE</h1>
-    <h4>Watch our introductory tutorial on O3DE below, or dive right into O3DE’s <a href="#" target="_blank">documentation</a>.</h4>
+    <h4>Watch our introductory tutorial on O3DE below, or dive right into O3DE's <a href="#" target="_blank">documentation</a>.</h4>
     <div class="row border getting-statred-view">
       <div class="col col-4">
         <img src="/img/home/GettingStarted1.jpg" class="getStatred-img">
@@ -9,9 +9,7 @@
       <div class="col col-8">
         <h3>Article Tutorial 1</h3>
         <div class="getstarted-text-width">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-          incididunt ut labore et dolore magna aliqua. In cursus turpis massa tincidunt dui. Et
-          ultrices neque ornare aenean euismod...
+          [LINK AND DESCRIPTION FOR LAUNCH VIDEO]
         </div>
         <a href="#" target="_blank">Learn more</a>
       </div>
