--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,7 +4,7 @@
 {{ $logo   := site.Params.logos.navbar }}
 
 <footer class="footer text-white">
-  <div class="container mt-5 pt-5 pb-5">
+  <div class="container pt-5 pb-5">
     <div class="row">
       <div class="col col-12 col-xl-8">
         <div class="navbar-brand">
