Added link to forums.
Signed-off-by: Danilo Aimini <82231674+AMZN-daimini@users.noreply.github.com>

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -243,6 +243,10 @@ $width: '59vw';
 
 .getting-started
   background: #111
+
+  a
+    color: #83BAE1
+
   .card
     padding: 1.5rem
     display: block
