--- a/layouts/partials/download/getting-started.html
+++ b/layouts/partials/download/getting-started.html
@@ -3,7 +3,7 @@
 <div class="getting-started d-flex align-items-center text-light mt-5">
   <div class="container pt-4">
     <h2>Getting Started</h2>
-    <p>Things getting tricky? Check out the community posts and documentation below, or ask a question in our forums.</p>
+    <p>Things getting tricky? Check out the community posts and documentation below, or ask a question in <a href="https://github.com/o3de/o3de/discussions" target="_blank">our forums.</a></p>
     <div class="row pt-4 pb-4 mb-4">
       <div class="col col-12 col-md-6 col-lg-3">
         <a href="#">
