Fix social icons in Community landing page, remove test blog articles, programmatically display blog article image in Community page.
Signed-off-by: Danilo Aimini <82231674+AMZN-daimini@users.noreply.github.com>

--- a/layouts/partials/blog-display.html
+++ b/layouts/partials/blog-display.html
@@ -13,7 +13,7 @@
     <div class="col col-12">
       <a class="card mb-3" href="{{ .RelPermalink }}">
         <div class="row">
-          <div class="col-md-4 card-image" style="background-image: url('{{ .Param "guide_img" }}')">
+          <div class="col-md-4 card-image" style="background-image: url('{{ .Param "blog_img" }}')">
           </div>
           <div class="col-md-8">
             <div class="card-body">
