Fix social icons in Community landing page, remove test blog articles, programmatically display blog article image in Community page. (#629)
Signed-off-by: Danilo Aimini <82231674+AMZN-daimini@users.noreply.github.com>

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -442,6 +442,17 @@ $width: '59vw';
     font-size: 1rem
     vertical-align: text-top
 
+  .fa-github
+    color: #231E1B
+  .fa-discord
+    color: #7289DA
+  .fa-calendar-days
+    color: #2A4875
+  .fa-twitter
+    color: #2AA9E0
+  a
+    color: #1E70EB
+
 .community-blog
   background: #111
 
