Updated the Downloads Get Started text.
Signed-off-by: Doug Erickson <dougeric@amazon.com>

--- a/layouts/partials/download/getting-started.html
+++ b/layouts/partials/download/getting-started.html
@@ -9,7 +9,7 @@
         <a href="#">
           <div class="card mb-3">
             <h4>Prerequisites</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et... Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et...</p>
+            <p>Read up on the hardware and platform requirements to build and run O3DE.</p>
             <div class="learn-more" href="#">Learn more</div>
           </div>
         </a>
@@ -18,7 +18,7 @@
         <a href="#">
           <div class="card mb-3">
             <h4>Setting up O3DE from GitHub</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et... Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et...</p>
+            <p>For the Developer Preview, follow these instructions closely. Save youself a few early adopter headaches!</p>
             <div class="learn-more" href="#">Learn more</div>
           </div>
         </a>
@@ -27,7 +27,7 @@
         <a href="#">
           <div class="card mb-3">
             <h4>Creating a project using the CLI</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et... Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et...</p>
+            <p>Learn to create an O3DE project using the command-line.</p>
             <div class="learn-more" href="#">Learn more</div>
           </div>
         </a>
@@ -36,7 +36,7 @@
         <a href="#">
           <div class="card mb-3">
             <h4>Troubleshooting the setup</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et... Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et...</p>
+            <p>Rarely do things go perfectly. Check out our initial troubleshooting advice, or contribute your own tips!</p>
             <div class="learn-more" href="#">Learn more</div>
           </div>
         </a>
