--- a/layouts/partials/home/get-started.html
+++ b/layouts/partials/home/get-started.html
@@ -7,11 +7,12 @@
         <img src="/img/home/GettingStarted1.jpg" class="getStatred-img">
       </div>
       <div class="col col-8">
-        <h3>Article Tutorial 1</h3>
+        <h3>What is O3DE?</h3>
         <div class="getstarted-text-width">
-          [LINK AND DESCRIPTION FOR LAUNCH VIDEO]
+          It's "Open", it's "3D", and it's an "Engine". Okay; got it. But what's it do, who's it for, and how do I get started with it?
+          Let AWS' Alex Damarjian guide you through the details of this new open-source project for games and simulation developers.
         </div>
-        <a href="#" target="_blank">Learn more</a>
+        <a href="https://www.youtube.com/watch?v=CQmjAxr7LZs " target="_blank">Watch it now!</a>
       </div>
     </div>
     <div class="row border getting-statred-view">
