--- a/layouts/partials/home/get-started.html
+++ b/layouts/partials/home/get-started.html
@@ -4,7 +4,7 @@
     <h4>Watch our introductory tutorial on O3DE below, or dive right into O3DE's <a href="#" target="_blank">documentation</a>.</h4>
     <div class="row border getting-statred-view">
       <div class="col col-4">
-        <img src="/img/home/GettingStarted1.jpg" class="getStatred-img">
+        <img src="/img/home/GettingStarted1.jpg" class="getStarted-img">
       </div>
       <div class="col col-8">
         <h3>What is O3DE?</h3>
@@ -17,7 +17,7 @@
     </div>
     <div class="row border getting-statred-view">
       <div class="col col-4">
-        <img src="/img/home/GettingStarted2.jpg" class="getStatred-img">
+        <img src="/img/home/GettingStarted2.jpg" class="getStarted-img">
       </div>
       <div class="col col-8">
         <h3>Coming Soon...</h3>
