more css typo fixes
Signed-off-by: Doug Erickson <dougeric@amazon.com>

--- a/layouts/partials/home/get-started.html
+++ b/layouts/partials/home/get-started.html
@@ -2,7 +2,7 @@
   <div class="d-flex flex-column">
     <h1>Get started with O3DE</h1>
     <h4>Watch our introductory tutorial on O3DE below, or dive right into O3DE's <a href="#" target="_blank">documentation</a>.</h4>
-    <div class="row border getting-statred-view">
+    <div class="row border getting-started-view">
       <div class="col col-4">
         <img src="/img/home/GettingStarted1.jpg" class="getStarted-img">
       </div>
@@ -15,7 +15,7 @@
         <a href="https://www.youtube.com/watch?v=CQmjAxr7LZs " target="_blank">Watch it now!</a>
       </div>
     </div>
-    <div class="row border getting-statred-view">
+    <div class="row border getting-started-view">
       <div class="col col-4">
         <img src="/img/home/GettingStarted2.jpg" class="getStarted-img">
       </div>
