--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -369,14 +369,14 @@ $width: '59vw';
   margin: 9px
 
   
-// layouts/partials/home/get-statred.html 
+// layouts/partials/home/get-started.html 
 
 .home-getstarted
   width: 70%
   padding-top: 72px
   padding-bottom: 72px
 
-.getting-statred-view
+.getting-started-view
   height: 180px
   margin-top: 40px
 
