--- a/layouts/partials/home/get-started.html
+++ b/layouts/partials/home/get-started.html
@@ -4,7 +4,7 @@
     <h4>Watch our introductory tutorial on O3DE below, or dive right into O3DE's <a href="#" target="_blank">documentation</a>.</h4>
     <div class="row border getting-started-view">
       <div class="col col-4">
-        <img src="/img/home/what-is-o3de-video-thumbnail.jpg" class="getStarted-img">
+        <a href="https://www.youtube.com/watch?v=CQmjAxr7LZs" target="_blank"></a><img src="/img/home/what-is-o3de-video-thumbnail.jpg" class="getStarted-img"></a>
       </div>
       <div class="col col-8">
         <h3>What is O3DE?</h3>
