--- a/layouts/partials/home/download.html
+++ b/layouts/partials/home/download.html
@@ -1,7 +1,7 @@
 <section class="container-fluid home-download">
     <div class="d-flex flex-column align-items-center">
-        <h1>Download Open 3D Engine now!</h1>
-        <h3>Interesting in kicking the tires? Download O3DE for your platform now!</h3>
+        <h1>Get started with Open 3D Engine now!</h1>
+        <h3>Interesting in kicking the tires? Get O3DE for your platform now!</h3>
         <p class="buttons">
           <a href="#" class="my-3 mr-3 btn text-white download-btn">Get Started</a>
         </p>
