Draft aggregator blog post -- needs messaging review (#635)
* blog post update -- needs review

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* updated version number

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* added video to front page

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* fixed typo in class ID

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* more css typo fixes

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* fixed link typo

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* updates to video thumbnail

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* wrapped image in an href

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* fixed a stupid autocomplete mistake

Signed-off-by: Doug Erickson <dougeric@amazon.com>

* changed download partial text to remove the word "download"

Signed-off-by: Doug Erickson <dougeric@amazon.com>

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -369,18 +369,18 @@ $width: '59vw';
   margin: 9px
 
   
-// layouts/partials/home/get-statred.html 
+// layouts/partials/home/get-started.html 
 
 .home-getstarted
   width: 70%
   padding-top: 72px
   padding-bottom: 72px
 
-.getting-statred-view
+.getting-started-view
   height: 180px
   margin-top: 40px
 
-.getStatred-img
+.getStarted-img
   height: 100%
   margin-left: -14px
 
