--- a/layouts/partials/home/get-started.html
+++ b/layouts/partials/home/get-started.html
@@ -2,21 +2,22 @@
   <div class="d-flex flex-column">
     <h1>Get started with O3DE</h1>
     <h4>Watch our introductory tutorial on O3DE below, or dive right into O3DE's <a href="#" target="_blank">documentation</a>.</h4>
-    <div class="row border getting-statred-view">
+    <div class="row border getting-started-view">
       <div class="col col-4">
-        <img src="/img/home/GettingStarted1.jpg" class="getStatred-img">
+        <a href="https://www.youtube.com/watch?v=CQmjAxr7LZs" target="_blank"><img src="/img/home/what-is-o3de-video-thumbnail.jpg" class="getStarted-img"></a>
       </div>
       <div class="col col-8">
-        <h3>Article Tutorial 1</h3>
+        <h3>What is O3DE?</h3>
         <div class="getstarted-text-width">
-          [LINK AND DESCRIPTION FOR LAUNCH VIDEO]
+          It's "Open", it's "3D", and it's an "Engine". Okay; got it. But what's it do, who's it for, and how do I get started with it?
+          Let AWS' Alex Damarjian guide you through the details of this new open-source project for games and simulation developers.
         </div>
-        <a href="#" target="_blank">Learn more</a>
+        <a href="https://www.youtube.com/watch?v=CQmjAxr7LZs" target="_blank">Watch it now!</a>
       </div>
     </div>
-    <div class="row border getting-statred-view">
+    <div class="row border getting-started-view">
       <div class="col col-4">
-        <img src="/img/home/GettingStarted2.jpg" class="getStatred-img">
+        <img src="/img/home/GettingStarted2.jpg" class="getStarted-img">
       </div>
       <div class="col col-8">
         <h3>Coming Soon...</h3>
