Contribute landing page setup - work in progress
Signed-off-by: Danilo Aimini <82231674+AMZN-daimini@users.noreply.github.com>

--- a/assets/sass/custom.sass
+++ b/assets/sass/custom.sass
@@ -484,6 +484,22 @@ $width: '59vw';
     background-position: 50% 50%
     padding-bottom: 10rem
 
+  
+// layouts/contribute/section.html 
+
+.contribute-hero 
+  background-color: $o3de-darkblue
+  background-image: url('/images/contribute/hero.png')
+  background-size: cover
+  background-position: 50% 50%
+  color: $o3de-white
+
+  p
+    font-size: 1.5rem
+    font-weight: 200
+    max-width: 800px
+    margin: 0 auto
+
 // Docs pages 
 
   // Welcome page
